--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -49,16 +49,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LayoutCreatorsFixture.cs" />
+    <Compile Include="Lab1\HistoryFixture.cs" />
+    <Compile Include="Lab1\BoardFixture.cs" />
+    <Compile Include="Lab1\LayoutCreatorsFixture.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Lab1\" />
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Controller\Controller.csproj">
+      <Project>{BB201A44-DFCA-4448-9622-303467B2EFAB}</Project>
+      <Name>Controller</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{9F567888-FD5A-4FE4-9B88-11E1CC1F888F}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\View\View.csproj">
       <Project>{b5ea1bf4-5611-45c3-b7fa-64b2d49b79c0}</Project>
       <Name>View</Name>
