--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Board.cs" />
     <Compile Include="BoardDifference.cs" />
     <Compile Include="Helpers.cs" />
+    <Compile Include="IBoard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
