--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -38,6 +38,9 @@
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
@@ -52,6 +55,7 @@
     <Compile Include="Lab1\HistoryFixture.cs" />
     <Compile Include="Lab1\BoardFixture.cs" />
     <Compile Include="Lab1\LayoutCreatorsFixture.cs" />
+    <Compile Include="Lab2\GameFixture.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
