--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Lab1\HistoryFixture.cs" />
     <Compile Include="Lab1\BoardFixture.cs" />
     <Compile Include="Lab1\LayoutCreatorsFixture.cs" />
-    <Compile Include="Lab2\FakeHistory.cs" />
+    <Compile Include="Lab2\HistoryFake.cs" />
     <Compile Include="Lab2\GameFixture.cs" />
   </ItemGroup>
   <ItemGroup>
