--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Lab1\LayoutCreatorsFixture.cs" />
     <Compile Include="Lab2\HistoryFake.cs" />
     <Compile Include="Lab2\GameFixture.cs" />
+    <Compile Include="Lab3\GameFixture.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
